change main game

--- a/index.html
+++ b/index.html
@@ -82,19 +82,25 @@
       <div class="row">
 
         <div class="col-lg-12">
-          <h1 class="page-header">Heavy Trucking<small></small></h1>
+          <h1 class="page-header">Raccoon Formality<small></small></h1>
         </div>
       </div>
 
       <div class="row">
 
         <div class="col-md-8">
-          <a href="https://raccoon-formality.itch.io/heavy-trucking"><img class="img-responsive" style="width: 750px; max-height: 500px; object-fit: contain; object-position: 50% 50%;" src="images/heavy_trucking.gif"></a>
+          <a href="https://raccoon-formality.itch.io/parking-ticket-mayhem">
+            <!--<img class="img-responsive" style="width: 750px; max-height: 500px; object-fit: contain; object-position: 50% 50%;" src="images/heavy_trucking.gif">-->
+            <video width="750px" height="500px" autoplay muted alt="video recording of gameplay of my game Parking Ticket Mayhem." title="video recording of gameplay of my game Parking Ticket Mayhem.">
+              <source src="images/parkingTicketMayhem.mp4" type="video/mp4">
+              Your browser does not support the video tag. Video recording of gameplay of my game Parking Ticket Mayhem.
+            </video> 
+          </a>
         </div>
 
         <div class="col-md-4">
           <h3>About my current project</h3>
-          <p>Heavy Trucking is a trucking simulator for the <a href="https://play.date">Panic Playdate</a> that is supposed to be reminiscent of similar early-90s trucking games. It's now out with a demo on <a href="https://raccoon-formality.itch.io/heavy-trucking">itch.io</a> :3</p>
+          <p><a href="https://raccoon-formality.itch.io/parking-ticket-mayhem">Parking Ticket Mayhem</a> is a game I made this rage room arcade style game over the frustrations I've had getting parking tickets in big cities. It's now out on <a href="https://raccoon-formality.itch.io/parking-ticket-mayhem">itch.io</a>.</p>
           <h3>Links</h3>
           <ul>
             <li><a rel="me" href="https://tech.lgbt/@raccoonformality">Mastodon</a></li>
