make video responsive

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="col-md-8">
           <a href="https://raccoon-formality.itch.io/parking-ticket-mayhem">
             <!--<img class="img-responsive" style="width: 750px; max-height: 500px; object-fit: contain; object-position: 50% 50%;" src="images/heavy_trucking.gif">-->
-            <video width="750px" height="500px" autoplay loop muted alt="video recording of gameplay of my game Parking Ticket Mayhem." title="video recording of gameplay of my game Parking Ticket Mayhem.">
+            <video class="img-responsive" width="750px" height="500px" autoplay loop muted alt="video recording of gameplay of my game Parking Ticket Mayhem." title="video recording of gameplay of my game Parking Ticket Mayhem.">
               <source src="images/parkingTicketMayhem.mp4" type="video/mp4">
               Your browser does not support the video tag. Video recording of gameplay of my game Parking Ticket Mayhem.
             </video> 
