update for scaling up industries

--- a/index.html
+++ b/index.html
@@ -89,31 +89,37 @@
       <div class="row">
 
         <div class="col-md-8">
-          <a href="https://raccoon-formality.itch.io/parking-ticket-mayhem">
+          <!--<a href="https://raccoon-formality.itch.io/parking-ticket-mayhem">-->
             <!--<img class="img-responsive" style="width: 750px; max-height: 500px; object-fit: contain; object-position: 50% 50%;" src="images/heavy_trucking.gif">-->
-            <video class="img-responsive" width="750px" height="500px" autoplay loop muted alt="video recording of gameplay of my game Parking Ticket Mayhem." title="video recording of gameplay of my game Parking Ticket Mayhem.">
-              <source src="images/parkingTicketMayhem.mp4" type="video/mp4">
-              Your browser does not support the video tag. Video recording of gameplay of my game Parking Ticket Mayhem.
+            <video class="img-responsive" width="750px" height="500px" autoplay controls loop muted alt="video recording of gameplay of my game Scaling Up Industries." title="video recording of gameplay of my game Scaling Up Industries.">
+              <source src="images/sui-video1-compressed.mp4" type="video/mp4">
+              Your browser does not support the video tag. Video recording of gameplay of my game Scaling Up Industries.
             </video> 
-          </a>
+          <!--</a>-->
         </div>
 
         <div class="col-md-4">
           <h3>About my current project</h3>
-          <p><a href="https://raccoon-formality.itch.io/parking-ticket-mayhem">Parking Ticket Mayhem</a> is a game I made this rage room arcade style game over the frustrations I've had getting parking tickets in big cities. It's now out on <a href="https://raccoon-formality.itch.io/parking-ticket-mayhem">itch.io</a>.</p>
-          <h3>Links</h3>
+          <p>Scaling Up Industries is a sci-fi FPS I am making with a local team for the <a href="https://itch.io/jam/game-off-2023">GameOff 2023</a> game jam held by GitHub.</p>
+          <hr>
+          <h3>Links:</h3>
+          <p>(Order based on how much I like them.)</p>
           <ul>
             <li><a rel="me" href="https://tech.lgbt/@raccoonformality">Mastodon</a></li>
-            <li><a rel="me" href="https://raccoon-formality.itch.io/">Games</a></li>
+            <li><a rel="me" href="https://raccoon-formality.itch.io/">Itch.io</a></li>
             <li><a rel="me" href="https://www.youtube.com/@raccoon-formality">Youtube</a></li>
             <li><a rel="me" href="https://www.tiktok.com/@RaccoonFormality">TikTok</a></li>
+            <li><a rel="me" href="https://bsky.app/profile/raccoonformality.bsky.social">Bluesky</a></li>
             <!--<li><a rel="me" href="https://retrospring.net/@Raccoon">Ask Me Anything</a></li>-->
           </ul>
-          <h3>Give me money</h3>
+          <h3>Give me money:</h3>
           <ul>
             <li><a rel="me" href="https://ko-fi.com/raccoonformality">Ko-Fi</a></li>
             <li><a rel="me" href="https://www.patreon.com/RaccoonFormality">Patreon</a></li>
           </ul>
+          <hr>
+          <p>I also have a <a href="https://github.com/Raccoon-Formality">GitHub</a> for those interested.</p>
+
         </div>
 
       </div>
