--- a/index.html
+++ b/index.html
@@ -125,6 +125,13 @@
       </div>
 
       <div class="row">
+        <div class="col-lg-12">
+          <h1 class="page-header">Latest YouTube Video</h1>
+        </div>
+        <iframe width="100%" src="https://www.youtube.com/embed/videoseries?si=wPX6K1C-41uOzxIQ&amp;list=UULFT3rtaXcwOZfprO5DOK7PzA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
+
+      <div class="row">
 
         <div class="col-lg-12">
           <h1 class="page-header">Featured Games <small></small></h1>
