--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
     <link href="css/3-col-portfolio.css" rel="stylesheet">
 
     <style>
-
           .dark-mode {
             background-color: #181A1B;
             color: #e8e6e3;
@@ -128,7 +127,7 @@
         <div class="col-lg-12">
           <h1 class="page-header">Latest YouTube Video</h1>
         </div>
-        <iframe width="100%" src="https://www.youtube.com/embed/videoseries?si=wPX6K1C-41uOzxIQ&amp;list=UULFT3rtaXcwOZfprO5DOK7PzA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="100%" style="aspect-ratio: 16/9;" src="https://www.youtube.com/embed/videoseries?si=wPX6K1C-41uOzxIQ&amp;list=UULFT3rtaXcwOZfprO5DOK7PzA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
 
       <div class="row">
