--- a/about/index.html
+++ b/about/index.html
@@ -95,19 +95,23 @@
         <div class="col-md-4">
           <h3>What is this?</h3>
           <p>Hello, my name is Matthew, and I have been making games regularly since March 2022 and I am determined to make this hobby of mine something big.</p>
-          <h3>Links</h3>
+          <h3>Links:</h3>
+          <p>(Order based on how much I like them.)</p>
           <ul>
             <li><a rel="me" href="https://tech.lgbt/@raccoonformality">Mastodon</a></li>
-            <li><a rel="me" href="https://raccoon-formality.itch.io/">Games</a></li>
+            <li><a rel="me" href="https://raccoon-formality.itch.io/">Itch.io</a></li>
             <li><a rel="me" href="https://www.youtube.com/@raccoon-formality">Youtube</a></li>
             <li><a rel="me" href="https://www.tiktok.com/@RaccoonFormality">TikTok</a></li>
+            <li><a rel="me" href="https://bsky.app/profile/raccoonformality.bsky.social">Bluesky</a></li>
             <!--<li><a rel="me" href="https://retrospring.net/@Raccoon">Ask Me Anything</a></li>-->
           </ul>
-          <h3>Give me money</h3>
+          <h3>Give me money:</h3>
           <ul>
             <li><a rel="me" href="https://ko-fi.com/raccoonformality">Ko-Fi</a></li>
             <li><a rel="me" href="https://www.patreon.com/RaccoonFormality">Patreon</a></li>
           </ul>
+          <hr>
+          <p>I also have a <a href="https://github.com/Raccoon-Formality">GitHub</a> for those interested.</p>
         </div>
 
       </div>
