--- a/games/index.html
+++ b/games/index.html
@@ -90,6 +90,12 @@
       <div class="row">
 
         <div class="col-md-3 portfolio-item">
+          <a href="https://raccoon-formality.itch.io/scaling-up-industries"><img class="img-responsive" src="images/SUI.png" width="700px"></a>
+          <h3><a href="https://raccoon-formality.itch.io/scaling-up-industries">Scaling Up Industries</a></h3>
+          <p>Sci-fi FPS that will blow your socks off!</p>
+        </div>
+
+        <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/parking-ticket-mayhem"><img class="img-responsive" src="images/parkingTicketMayhem.png" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/parking-ticket-mayhem">Parking Ticket Mayhem</a></h3>
           <p>Digital rage room about getting a parking ticket.</p>
@@ -107,14 +113,14 @@
           <p>Gay furry visual novel for the Panic Playdate handheld.</p>
         </div>
 
+      </div>
+      <div class="row">
+
         <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/subby-v-squid"><img class="img-responsive" src="images/subby_v_squid.png" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/subby-v-squid">Subby V. Squid</a></h3>
           <p>Simple game I made for the PlayJam.</p>
         </div>
-
-      </div>
-      <div class="row">
 
         <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/crankout"><img class="img-responsive" src="images/crankout.png" width="700px"></a>
@@ -134,14 +140,14 @@
           <p>A short game demo I made to learn the complexities of 3D gamedev.</p>
         </div>
 
+      </div>
+      <div class="row">
+
         <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/void-in-capital"><img class="img-responsive" src="images/void_in_capital.png" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/void-in-capital">Void In Capital</a></h3>
           <p>You must go to a nearby village to get everything you can.</p>
         </div>
-
-      </div>
-      <div class="row">
 
         <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/get-your-coffee"><img class="img-responsive" src="images/get_your_coffee.png" width="700px"></a>
@@ -161,16 +167,14 @@
           <p>Your love means nothing and there are no secrets.</p>
         </div>
 
+      </div>
+      <div class="row">
+
         <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/glass-half-full"><img class="img-responsive" src="images/glass_half_full.gif" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/glass-half-full">Glass Half Full</a></h3>
           <p>A short romance story about two men on a business trip.</p>
         </div>
-
-        
-
-      </div>
-      <div class="row">
 
         <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/angry-crab"><img class="img-responsive" src="images/angry_crab.png" width="700px"></a>
