--- a/index.html
+++ b/index.html
@@ -88,18 +88,16 @@
       <div class="row">
 
         <div class="col-md-8">
-          <!--<a href="https://raccoon-formality.itch.io/parking-ticket-mayhem">-->
-            <!--<img class="img-responsive" style="width: 750px; max-height: 500px; object-fit: contain; object-position: 50% 50%;" src="images/heavy_trucking.gif">-->
-            <video class="img-responsive" width="750px" height="500px" autoplay controls loop muted alt="video recording of gameplay of my game Scaling Up Industries." title="video recording of gameplay of my game Scaling Up Industries.">
-              <source src="images/sui-video1-compressed.mp4" type="video/mp4">
-              Your browser does not support the video tag. Video recording of gameplay of my game Scaling Up Industries.
-            </video> 
-          <!--</a>-->
+          <a href="https://raccoon-formality.itch.io/scaling-up-industries">
+            <img class="img-responsive" style="width: 750px; max-height: 500px; object-fit: contain; object-position: 50% 50%;" src="images/sui-promo.PNG">
+          </a>
         </div>
 
         <div class="col-md-4">
           <h3>About my current project</h3>
-          <p>Scaling Up Industries is a sci-fi FPS I am making with a local team for the <a href="https://itch.io/jam/game-off-2023">GameOff 2023</a> game jam held by GitHub.</p>
+          <p><a href="https://raccoon-formality.itch.io/scaling-up-industries">Scaling Up Industries</a> is a Sci-fi FPS that will blow your socks off! You are a undercover operative on the mission to destroy the alien science facility known as Scaling Up Industries and save humanity. Do you have what it takes to defeat what horrors you might find inside?
+            <br><br>The intense gameplay mixed with the original made, kick-ass soundtrack is sure to keep you on the edge of your seat from beginning to end! 
+            <br><br>Made for the <a href="https://itch.io/jam/game-off-2023">GameOff 2023</a> game jam held by GitHub.</p>
           <hr>
           <h3>Links:</h3>
           <p>(Order based on how much I like them.)</p>
@@ -141,6 +139,12 @@
       <div class="row">
 
         <div class="col-md-3 portfolio-item">
+          <a href="https://raccoon-formality.itch.io/scaling-up-industries"><img class="img-responsive" src="images/SUI.png" width="700px"></a>
+          <h3><a href="https://raccoon-formality.itch.io/scaling-up-industries">Scaling Up Industries</a></h3>
+          <p>Sci-fi FPS that will blow your socks off!</p>
+        </div>
+
+        <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/parking-ticket-mayhem"><img class="img-responsive" src="images/parkingTicketMayhem.png" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/parking-ticket-mayhem">Parking Ticket Mayhem</a></h3>
           <p>Digital rage room about getting a parking ticket.</p>
@@ -156,12 +160,6 @@
           <a href="https://raccoon-formality.itch.io/noodles-and-love"><img class="img-responsive" src="images/noodles_and_love.gif" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/noodles-and-love">Noodles & Love</a></h3>
           <p>Gay furry visual novel for the Panic Playdate handheld.</p>
-        </div>
-
-        <div class="col-md-3 portfolio-item">
-          <a href="https://raccoon-formality.itch.io/need-not-you"><img class="img-responsive" src="images/need_not_you.png" width="700px"></a>
-          <h3><a href="https://raccoon-formality.itch.io/need-not-you">Need Not You</a></h3>
-          <p>Your love means nothing and there are no secrets.</p>
         </div>
 
       </div>
