--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
           <a href="https://raccoon-formality.itch.io/scaling-up-industries">
             <img class="img-responsive" style="width: 750px; max-height: 500px; object-fit: contain; object-position: 50% 50%;" src="images/sui-promo.PNG">
           </a>
+          <img class="img-responsive" style="padding-top: 15px; width: 750px; max-height: 500px; object-fit: contain; object-position: 50% 50%;" src="images/W2.png">
         </div>
 
         <div class="col-md-4">
