--- a/index.html
+++ b/index.html
@@ -58,11 +58,25 @@ margin-left: 5%;
 }
 .nav .links {
     float:center;
-    gap: 1em;
+    gap: 0.5em;
 }
 .nav {
     flex-direction: column;
-  }
+}
+.nav .profile span {
+font-size: 24pt;
+line-height: normal;
+text-align: center;
+}
+
+.logo {
+width: 2em;
+}
+
+.item {
+    height: 360px;
+}
+
 }
 @media only screen and (min-width: 1200px) {
 body {
@@ -80,13 +94,26 @@ margin-left: 20%;
     gap: 2em;
 }
 
+.nav .profile span {
+font-size: 32pt;
+line-height: normal;
+text-align: center;
+}
+
+.logo {
+width: 40px;
+height: 40px;
+}
+
+.item {
+    height: 720px;
+}
+
 }
 
 
 
 .logo {
-width: 40px;
-height: 40px;
 vertical-align: middle !important;
 transition: all .2s ease-in-out; 
 }
@@ -96,6 +123,7 @@ transform: scale(1.25) rotate(10deg);
 
 .nav {
   justify-content: space-between;
+  display: flex;
 }
 
 .nav .profile img {
@@ -119,25 +147,19 @@ gap: 2em;
 
 .nav .links {
     padding: 15px;
-    
-
   border-radius: 10px;
     background-color: black;
+    flex-basis: 25%;
 }
 
 .logo {
     filter: invert(1);
 }
 
-.nav .profile span {
-    font-size: 36pt;
-    line-height: normal;
-    text-align: center;
-}
+
 
 .item {
     background-size: cover;
-    height: 720px;
 }
 .item .front {
 height: 100% !important;
