--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ object-fit: cover;
   margin-right: auto;
 }
 
-.item h3 {
+.item h4 {
     background-color: black;
     width: fit-content;
   margin-left: auto;
@@ -223,7 +223,7 @@ object-fit: cover;
 <h1 style="text-align: center;">2024 is the year of the raccoon 🦝</h1>
 <hr>
 </div>
-<div class="container" style="width:100%;">
+<div class="container" style="width:100%; float: right;">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
       <ol class="carousel-indicators">
@@ -240,7 +240,7 @@ object-fit: cover;
             <img src="images/sui-promo.PNG" class="front">
             <div class="carousel-caption">
                 <h1>Scaling Up Industries</h1>
-                <h3>Sci-fi FPS that will blow your socks off!</h3>
+                <h4>Sci-fi FPS that will blow your socks off!</h4>
             </div>
             
         </a>
@@ -252,7 +252,7 @@ object-fit: cover;
             <img src="screenshots/ptm.png" class="front">
             <div class="carousel-caption">
                 <h1>Parking Ticket Mayhem</h1>
-                <h3>Digital rage room about getting a parking ticket.</h3>
+                <h4>Digital rage room about getting a parking ticket.</h4>
             </div>
         </a>
         </div>
@@ -263,7 +263,7 @@ object-fit: cover;
           <img src="screenshots/ht.png" class="front">
             <div class="carousel-caption">
                 <h1>Heavy Trucking</h1>
-                <h3>Trucking sim for the Panic Playdate reminiscent of similar games from the mid-90s.</h3>
+                <h4>Trucking sim for the Panic Playdate reminiscent of similar games from the mid-90s.</h4>
             </div>
             
         </a>
@@ -275,7 +275,7 @@ object-fit: cover;
             <img src="screenshots/n&l.png" class="front">
               <div class="carousel-caption">
                   <h1>Noodles & Love</h1>
-                  <h3>Gay furry visual novel dating sim for the Panic Playdate handheld.</h3>
+                  <h4>Gay furry visual novel dating sim for the Panic Playdate handheld.</h4>
               </div>
           </div>
 
