--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ transform: scale(1.25) rotate(10deg);
 
 .nav {
   justify-content: space-between;
-  display: flex;
+  display: block;
 }
 
 .nav .profile img {
