--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@ text-align: center;
 }
 
 .logo {
-width: 2em;
+width: 60px;
+width: 60px;
 }
 
 .item {
@@ -135,7 +136,7 @@ transform: scale(1.25) rotate(10deg);
 .nav .links {
     margin-top: 15px;
   display: flex;
-  height: 100px;
+  min-height: 100px;
   justify-content: center;
   align-items: center;
   justify-content: space-between;
@@ -150,6 +151,7 @@ gap: 2em;
   border-radius: 10px;
     background-color: black;
     flex-basis: 25%;
+    flex-wrap: wrap;
 }
 
 .logo {
