--- a/games/index.html
+++ b/games/index.html
@@ -31,6 +31,17 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   </head>
 <style>
+
+@font-face {
+    font-family: RaccoonSerif;
+    src: url(../font/HelveticaBold.ttf);
+    font-weight: normal;
+}
+
+* {
+    font-family: RaccoonSerif;
+}
+
 @media only screen and (max-width: 1200px) {
 .game {
     width: 100%;
@@ -87,6 +98,10 @@ body {
 
 </style>
 <body>
+<div style="width: 90%;">
+    <a href="../"><h1>HOME</h1></a>
+    <hr>
+</div>
 <div class="holder">
 
         <div class="game">
