--- a/index.html
+++ b/index.html
@@ -232,6 +232,8 @@ object-fit: cover;
 <div class="tagline" style="width: 100%; float:left;">
 <h1 style="text-align: center;">2024 is the year of the raccoon 🦝</h1>
 <hr>
+<a href="games/"><h1 style="text-align: center;">GAMES</h1></a>
+<hr>
 </div>
 <div class="container" style="width:100%; float: right;"> 
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
