--- a/games/index.html
+++ b/games/index.html
@@ -89,9 +89,7 @@ body {
   
   border-radius: 10px;
 }
-.game h3 {
-    display:block;
-}
+
 .img-responsive {
     width: 100%;
 }
@@ -106,100 +104,100 @@ body {
 
         <div class="game">
           <a href="https://raccoon-formality.itch.io/scaling-up-industries"><img class="img-responsive" src="../images/SUI.png" ></a>
-          <h3><a href="https://raccoon-formality.itch.io/scaling-up-industries">Scaling Up Industries</a></h3>
-          <p>Sci-fi FPS that will blow your socks off!</p>
+          <h2><a href="https://raccoon-formality.itch.io/scaling-up-industries">Scaling Up Industries</a></h2>
+          <h4>Sci-fi FPS that will blow your socks off!</h4>
         </div>
 
         <div class="game">
           <a href="https://raccoon-formality.itch.io/parking-ticket-mayhem"><img class="img-responsive" src="../images/parkingTicketMayhem.png" ></a>
-          <h3><a href="https://raccoon-formality.itch.io/parking-ticket-mayhem">Parking Ticket Mayhem</a></h3>
-          <p>Digital rage room about getting a parking ticket.</p>
+          <h2><a href="https://raccoon-formality.itch.io/parking-ticket-mayhem">Parking Ticket Mayhem</a></h2>
+          <h4>Digital rage room about getting a parking ticket.</h4>
         </div>
 
         <div class="game">
           <a href="https://raccoon-formality.itch.io/heavy-trucking"><img class="img-responsive" src="../images/heavytrucking.png" ></a>
-          <h3><a href="https://raccoon-formality.itch.io/heavy-trucking">Heavy Trucking</a></h3>
-          <p>Trucking sim for the Panic Playdate reminiscent of similar games from the mid-90s.</p>
+          <h2><a href="https://raccoon-formality.itch.io/heavy-trucking">Heavy Trucking</a></h2>
+          <h4>Trucking sim for the Panic Playdate reminiscent of similar games from the mid-90s.</h4>
         </div>
 
         <div class="game">
           <a href="https://raccoon-formality.itch.io/noodles-and-love"><img class="img-responsive" src="../images/noodles_and_love.gif" ></a>
-          <h3><a href="https://raccoon-formality.itch.io/noodles-and-love">Noodles & Love</a></h3>
-          <p>Gay furry visual novel for the Panic Playdate handheld.</p>
+          <h2><a href="https://raccoon-formality.itch.io/noodles-and-love">Noodles & Love</a></h2>
+          <h4>Gay furry visual novel for the Panic Playdate handheld.</h4>
         </div>
 
 
         <div class="game">
           <a href="https://raccoon-formality.itch.io/subby-v-squid"><img class="img-responsive" src="../images/subby_v_squid.png" ></a>
-          <h3><a href="https://raccoon-formality.itch.io/subby-v-squid">Subby V. Squid</a></h3>
-          <p>Simple game I made for the PlayJam.</p>
+          <h2><a href="https://raccoon-formality.itch.io/subby-v-squid">Subby V. Squid</a></h2>
+          <h4>Simple game I made for the PlayJam.</h4>
         </div>
 
         <div class="game">
           <a href="https://raccoon-formality.itch.io/crankout"><img class="img-responsive" src="../images/crankout.png" ></a>
-          <h3><a href="https://raccoon-formality.itch.io/crankout">CrankOut</a></h3>
-          <p>Simple breakout clone I made to learn the Playdate SDK and get use to it in preparation for the PlayJam.</p>
+          <h2><a href="https://raccoon-formality.itch.io/crankout">CrankOut</a></h2>
+          <h4>Simple breakout clone I made to learn the Playdate SDK and get use to it in preparation for the PlayJam.</h4>
         </div>
 
         <div class="game">
           <a href="https://raccoon-formality.itch.io/last-chance"><img class="img-responsive" src="../images/last_chance.gif" ></a>
-          <h3><a href="https://raccoon-formality.itch.io/last-chance">Last Chance</a></h3>
-          <p>Short game made for the Bullet Hell Game Jam 2023.</p>
+          <h2><a href="https://raccoon-formality.itch.io/last-chance">Last Chance</a></h2>
+          <h4>Short game made for the Bullet Hell Game Jam 2023.</h4>
         </div>
 
         <div class="game">
           <a href="https://raccoon-formality.itch.io/waterlocket"><img class="img-responsive" src="../images/waterlocket.png" ></a>
-          <h3><a href="https://raccoon-formality.itch.io/waterlocket">Waterlocket</a></h3>
-          <p>A short game demo I made to learn the complexities of 3D gamedev.</p>
+          <h2><a href="https://raccoon-formality.itch.io/waterlocket">Waterlocket</a></h2>
+          <h4>A short game demo I made to learn the complexities of 3D gamedev.</h4>
         </div>
 
 
         <div class="game">
           <a href="https://raccoon-formality.itch.io/void-in-capital"><img class="img-responsive" src="../images/void_in_capital.png" ></a>
-          <h3><a href="https://raccoon-formality.itch.io/void-in-capital">Void In Capital</a></h3>
-          <p>You must go to a nearby village to get everything you can.</p>
+          <h2><a href="https://raccoon-formality.itch.io/void-in-capital">Void In Capital</a></h2>
+          <h4>You must go to a nearby village to get everything you can.</h4>
         </div>
 
         <div class="game">
           <a href="https://raccoon-formality.itch.io/get-your-coffee"><img class="img-responsive" src="../images/get_your_coffee.png" ></a>
-          <h3><a href="https://raccoon-formality.itch.io/get-your-coffee">Get Your Coffee</a></h3>
-          <p>Get your coffee.</p>
+          <h2><a href="https://raccoon-formality.itch.io/get-your-coffee">Get Your Coffee</a></h2>
+          <h4>Get your coffee.</h4>
         </div>
 
         <div class="game">
           <a href="https://raccoon-formality.itch.io/bonkers"><img class="img-responsive" src="../images/bonkers.png" ></a>
-          <h3><a href="https://raccoon-formality.itch.io/bonkers">Bonkers</a></h3>
-          <p>I made this game in around 2 hours because I was bored.</p>
+          <h2><a href="https://raccoon-formality.itch.io/bonkers">Bonkers</a></h2>
+          <h4>I made this game in around 2 hours because I was bored.</h4>
         </div>
 
         <div class="game">
           <a href="https://raccoon-formality.itch.io/need-not-you"><img class="img-responsive" src="../images/need_not_you.png" ></a>
-          <h3><a href="https://raccoon-formality.itch.io/need-not-you">Need Not You</a></h3>
-          <p>Your love means nothing and there are no secrets.</p>
+          <h2><a href="https://raccoon-formality.itch.io/need-not-you">Need Not You</a></h2>
+          <h4>Your love means nothing and there are no secrets.</h4>
         </div>
 
         <div class="game">
           <a href="https://raccoon-formality.itch.io/glass-half-full"><img class="img-responsive" src="../images/glass_half_full.gif" ></a>
-          <h3><a href="https://raccoon-formality.itch.io/glass-half-full">Glass Half Full</a></h3>
-          <p>A short romance story about two men on a business trip.</p>
+          <h2><a href="https://raccoon-formality.itch.io/glass-half-full">Glass Half Full</a></h2>
+          <h4>A short romance story about two men on a business trip.</h4>
         </div>
 
         <div class="game">
           <a href="https://raccoon-formality.itch.io/angry-crab"><img class="img-responsive" src="../images/angry_crab.png" ></a>
-          <h3><a href="https://raccoon-formality.itch.io/angry-crab">Angry Crab</a></h3>
-          <p>I made this game because I was angry.</p>
+          <h2><a href="https://raccoon-formality.itch.io/angry-crab">Angry Crab</a></h2>
+          <h4>I made this game because I was angry.</h4>
         </div>
 
         <div class="game">
           <a href="https://raccoon-formality.itch.io/escape-the-date"><img class="img-responsive" src="../images/escape_the_date.png" ></a>
-          <h3><a href="https://raccoon-formality.itch.io/escape-the-date">Escape The Date</a></h3>
-          <p>A bullet hell dating sim.</p>
+          <h2><a href="https://raccoon-formality.itch.io/escape-the-date">Escape The Date</a></h2>
+          <h4>A bullet hell dating sim.</h4>
         </div>
 
         <div class="game">
           <a href="https://raccoon-formality.itch.io/slime-jumper"><img class="img-responsive" src="../images/slime_jumper.png" ></a>
-          <h3><a href="https://raccoon-formality.itch.io/slime-jumper">Slime Jumper</a></h3>
-          <p>My first 2d platformer and I couldn't be prouder.</p>
+          <h2><a href="https://raccoon-formality.itch.io/slime-jumper">Slime Jumper</a></h2>
+          <h4>My first 2d platformer and I couldn't be prouder.</h4>
         </div>
 </div>
 </body>
