--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ object-fit: cover;
         <span>Raccoon Formality</span>
     </div>
     <div class="links">
-        <a alt="mastodon" href="https://tech.lgbt/@raccoonformality" target="_blank" rel="noopener noreferrer"><img class="logo" src="logos/logo-black.svg"></a>
+        <a alt="mastodon" rel="me" href="https://tech.lgbt/@raccoonformality" target="_blank" rel="noopener noreferrer"><img class="logo" src="logos/logo-black.svg"></a>
         <a alt="itch.io" href="https://raccoon-formality.itch.io/" target="_blank" rel="noopener noreferrer"><img class="logo" src="logos/itchio-textless-black.svg"></a>
         <a alt="youtube" href="https://www.youtube.com/@raccoon-formality" target="_blank" rel="noopener noreferrer"><img class="logo" src="logos/youtube.svg"></a>
         <a alt="ko-fi" href="https://ko-fi.com/raccoonformality" target="_blank" rel="noopener noreferrer"><img class="logo" src="logos/ko-fi.svg"></a>
