better text wrapping for name

--- a/games/index.html
+++ b/games/index.html
@@ -97,7 +97,7 @@ body {
 </style>
 <body>
 <div style="width: 90%;">
-    <a href="../"><h1>◄ HOME</h1></a>
+    <a href="../"><h1>HOME</h1></a>
     <hr>
 </div>
 <div class="holder">
