--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ margin-left: 5%;
 .nav .profile span {
 font-size: 32pt;
 line-height: normal;
-text-align: center;
+text-align: left;
 }
 
 .logo {
@@ -98,7 +98,6 @@ margin-left: 20%;
 .nav .profile span {
 font-size: 32pt;
 line-height: normal;
-text-align: center;
 }
 
 .logo {
@@ -205,6 +204,8 @@ object-fit: cover;
   margin-left: auto;
   margin-right: auto;
 }
+
+
 </style>
 <body>
 
