--- a/games/index.html
+++ b/games/index.html
@@ -34,7 +34,7 @@
 
 @font-face {
     font-family: RaccoonSerif;
-    src: url(../font/HelveticaBold.ttf);
+    src: url(../font/Inter-Bold.ttf);
     font-weight: normal;
 }
 
@@ -97,7 +97,7 @@ body {
 </style>
 <body>
 <div style="width: 90%;">
-    <a href="../"><h1>HOME</h1></a>
+    <a href="../"><h1>◄ HOME</h1></a>
     <hr>
 </div>
 <div class="holder">
