--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="icon" type="image/jpg" href="logo2-trans.png"/>
+    <link rel="icon" type="image/jpg" href="logo2.png"/>
 <!-- HTML Meta Tags -->
 <title>Raccoon Formality</title>
 <meta name="description" content="game developer">
@@ -9,20 +9,20 @@
 <!-- Google / Search Engine Tags -->
 <meta itemprop="name" content="Raccoon Formality">
 <meta itemprop="description" content="game developer">
-<meta itemprop="image" content="https://raccoonformality.com/logo2-trans.png">
+<meta itemprop="image" content="https://raccoonformality.com/logo2.png">
 
 <!-- Facebook Meta Tags -->
 <meta property="og:url" content="https://raccoonformality.com">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Raccoon Formality">
 <meta property="og:description" content="game developer">
-<meta property="og:image" content="https://raccoonformality.com/logo2-trans.png">
+<meta property="og:image" content="https://raccoonformality.com/logo2.png">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Raccoon Formality">
 <meta name="twitter:description" content="game developer">
-<meta name="twitter:image" content="https://raccoonformality.com/logo2-trans.png">
+<meta name="twitter:image" content="https://raccoonformality.com/logo2.png">
     <title>Raccoon Formality</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -129,7 +129,7 @@ height: 40px;
 }
 
 .nav .profile img {
-  height: 120px;
+  height: 100px;
   transition: all 0.2s ease-in-out; 
 }
 .nav .profile img:hover { 
