--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@ width: 50px;
     height: 360px;
 }
 
+.nav .profile img {
+  height: 80px;
+}
+
 }
 @media only screen and (min-width: 1200px) {
 body {
@@ -117,6 +121,10 @@ height: 40px;
     height: 720px;
 }
 
+.nav .profile img {
+  height: 120px;
+}
+
 }
 
 
@@ -129,7 +137,6 @@ height: 40px;
 }
 
 .nav .profile img {
-  height: 100px;
   transition: all 0.2s ease-in-out; 
 }
 .nav .profile img:hover { 
