added stats page, to add alt-text later

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ object-fit: cover;
 <div class="tagline" style="width: 100%; float:left;">
 <h1 style="text-align: center;">2024 is the year of the raccoon 🦝</h1>
 <hr>
-<a href="games/"><h1 style="text-align: center;">GAMES</h1></a>
+<h1 style="text-align: center;"><a href="games/">GAMES</a> - <a href="stats/">STATISTICS</a></h1>
 <hr>
 </div>
 <div class="container" style="width:100%; float: right;"> 
@@ -358,6 +358,7 @@ object-fit: cover;
     <hr>
     <h1 style="text-align: center;">Why?</h1>
     <h3 style="text-align: center;">I don't know, this kind of existential question is what keeps me up at night</h3>
+    <h3 style="text-align: center;">Seriously though, this is main hobby and it has slowly grown over the past few years and I greatly enjoy watching the growth.</h3>
     <hr>
     
 <img style="width: 100%;"src="mamagnolia_acresunderconstruction.gif">
