--- a/stats/index.html
+++ b/stats/index.html
@@ -82,7 +82,8 @@ img {
     </div>
 <div class="info">
     <h1>Update: January 2nd, 2024</h1>
-    <img src="2024-01-02.png">
+    <img src="2024-01-02-top.png">
+    <img src="2024-01-02-better.png">
 </div>
   </body>
   </html>
