--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ object-fit: cover;
 <div class="tagline" style="width: 100%; float:left;">
 <h1 style="text-align: center;">2024 is the year of the raccoon 🦝</h1>
 <hr>
-<h1 style="text-align: center;"><a href="games/">GAMES</a> - <a href="stats/">STATISTICS</a></h1>
+<h1 style="text-align: center;"><a href="games/">GAMES</a> - <a href="blog/">BLOG</a> - <a href="stats/">STATISTICS</a></h1>
 <hr>
 </div>
 <div class="container" style="width:100%; float: right;"> 
