--- a/stats/index.html
+++ b/stats/index.html
@@ -77,7 +77,7 @@ img {
   </style>
   <body>
     <div style="width: 100%;">
-        <a href="../"><h1>◄ HOME</h1></a>
+        <a href="../"><img style="width: 100px;" src="https://raccoonformality.com/logo2.png"></a>
         <hr>
     </div>
 <div class="info">
