--- a/games/index.html
+++ b/games/index.html
@@ -97,10 +97,15 @@ body {
 </style>
 <body>
 <div style="width: 90%;">
-    <a href="../"><h1>◄ HOME</h1></a>
+    <a href="../"><img style="width: 100px;" src="https://raccoonformality.com/logo2.png"></a>
     <hr>
 </div>
 <div class="holder">
+        <div class="game">
+          <a href="https://raccoon-formality.itch.io/the-pig-pen"><img class="img-responsive" src="../images/the_pig_pen.png" ></a>
+          <h2><a href="https://raccoon-formality.itch.io/the-pig-pen">The Pig Pen</a></h2>
+          <h4>Esape the cops!</h4>
+        </div>
 
         <div class="game">
           <a href="https://raccoon-formality.itch.io/scaling-up-industries"><img class="img-responsive" src="../images/SUI.png" ></a>
