--- a/about/index.html
+++ b/about/index.html
@@ -95,7 +95,7 @@ img {
     <h2>Matthew</h2>
     <hr>
     <img src="../images/racc.jpg" style="width: 25%; border-radius: 50%;">
-    <h4>Hello, my name is Matthew. I've worked on every single game released by Raccoon Formality. I founded and created Raccoon Formality. I also created the first 14 projects by myself. I am the Raccoon and the Formality behind this operation. I am, quite literally, the greatest game developer to have ever walked the earth. Other than that, I don't really have a lot to say. If you are reading this, please hire me.</h4>
+    <h4>Hello, my name is Matthew. Making games is my freedom from pain and suffering and the external world.</h4>
     <h2>Credits</h2>
     <hr>
     <h4>These are the games I've worked on with other people and what credits they have on the game.</h4>
