--- a/games/index.html
+++ b/games/index.html
@@ -101,6 +101,19 @@ body {
     <hr>
 </div>
 <div class="holder">
+        
+  <div class="game">
+    <a href="https://raccoon-formality.itch.io/you-donut-get-it"><img class="img-responsive" src="../images/ydgi.gif" ></a>
+    <h2><a href="https://raccoon-formality.itch.io/you-donut-get-it">You Donut Get It</a></h2>
+    <h4>Game to fill the donut shaped hole in you!</h4>
+  </div>
+
+  <div class="game">
+    <a href="https://raccoon-formality.itch.io/cheese-please-demo"><img class="img-responsive" src="../images/cheese_please.png" ></a>
+    <h2><a href="https://raccoon-formality.itch.io/cheese-please-demo">CHEESE PLEASE</a></h2>
+    <h4>A GAME YOU NEED TO PLAY TO STAY ALIVE</h4>
+  </div>
+
         <div class="game">
           <a href="https://raccoon-formality.itch.io/the-pig-pen"><img class="img-responsive" src="../images/the_pig_pen.png" ></a>
           <h2><a href="https://raccoon-formality.itch.io/the-pig-pen">The Pig Pen</a></h2>
