--- a/index.html
+++ b/index.html
@@ -263,12 +263,26 @@ object-fit: cover;
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
         <li data-target="#myCarousel" data-slide-to="3"></li>
+        <li data-target="#myCarousel" data-slide-to="4"></li>
       </ol>
   
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
+
+        <a href="https://raccoon-formality.itch.io/you-donut-get-it" target="_blank" rel="noopener noreferrer">
+            <div class="item active" style="background-image: url('screenshots/ydgi.png');">
+                <div class="blur"></div>
+                <img src="screenshots/ydgi.png" class="front">
+                <div class="carousel-caption">
+                    <h1>You Donut Get It</h1>
+                    <h4>Game to fill the donut shaped hole in you!</h4>
+                </div>
+                
+            </a>
+        </div>
+
         <a href="https://raccoon-formality.itch.io/scaling-up-industries" target="_blank" rel="noopener noreferrer">
-        <div class="item active" style="background-image: url('images/sui-promo.PNG');">
+        <div class="item" style="background-image: url('images/sui-promo.PNG');">
             <div class="blur"></div>
             <img src="images/sui-promo.PNG" class="front">
             <div class="carousel-caption">
