--- a/stats/index.html
+++ b/stats/index.html
@@ -82,6 +82,9 @@ img {
         <hr>
     </div>
 <div class="info">
+    <h1>Update: May 3rd, 2024</h1>
+    <img src="2024-05-03-top.png">
+    <img src="2024-05-03.png">
     <h1>Update: January 2nd, 2024</h1>
     <img src="2024-01-02-top.png">
     <img src="2024-01-02-better.png">
